parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr06.wacc
# type mismatch: bool <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = "true"
end
